[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-lobster"
version = "0.1.0"
description = "A-share strategy research, signal, backtest, and observation system."
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
include = ["stock_lobster*"]
