[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-lobster"
version = "0.1.0"
description = "A-share strategy research, signal, backtest, and observation system."
requires-python = ">=3.11"
dependencies = ["PyMySQL>=1.1"]

[project.scripts]
data-foundation = "interfaces.cli.data_foundation:main"

[tool.setuptools.packages.find]
include = ["stock_lobster*", "data_foundation*", "shared*", "interfaces*", "workflows*"]
